--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.title {
+  background: #eee;
+  padding: 100px;
+
+  text-align: center;
+  transition: 100ms ease-in background;
+}
+
+.title:hover {
+  background: #ccc;
+}
